[gd_scene load_steps=3 format=2]

[ext_resource path="res://dropshadower/ui/controls/DialControl.tscn" type="PackedScene" id=1]
[ext_resource path="res://dropshadower/ui/ShadowEditPanel.gd" type="Script" id=2]

[node name="ShadowEditRoot" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -687.0
script = ExtResource( 2 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 330.0
margin_bottom = 593.0

[node name="Label" type="Label" parent="VBox"]
margin_right = 323.0
margin_bottom = 14.0
text = "Dropshadow Editor"

[node name="EnableButton" type="Button" parent="VBox"]
margin_top = 18.0
margin_right = 323.0
margin_bottom = 38.0
toggle_mode = true
text = "Enable"

[node name="V" type="VBoxContainer" parent="VBox"]
margin_top = 42.0
margin_right = 323.0
margin_bottom = 298.0
mouse_filter = 0

[node name="DialControlM" type="MarginContainer" parent="VBox/V"]
margin_right = 323.0
margin_bottom = 144.0
custom_constants/margin_right = 40
custom_constants/margin_top = 40
custom_constants/margin_left = 40
custom_constants/margin_bottom = 40

[node name="Control" parent="VBox/V/DialControlM" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_top = 40.0
margin_right = 283.0
margin_bottom = 104.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 0

[node name="ShadowControl" type="HBoxContainer" parent="VBox/V"]
margin_top = 148.0
margin_right = 323.0
margin_bottom = 172.0

[node name="Spacer1" type="Control" parent="VBox/V/ShadowControl"]
margin_right = 19.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="AngleLabel" type="Label" parent="VBox/V/ShadowControl"]
margin_left = 23.0
margin_top = 5.0
margin_right = 59.0
margin_bottom = 19.0
text = "Angle"

[node name="AngleVal" type="SpinBox" parent="VBox/V/ShadowControl"]
margin_left = 63.0
margin_right = 137.0
margin_bottom = 24.0
max_value = 360.0

[node name="Spacer2" type="Control" parent="VBox/V/ShadowControl"]
margin_left = 141.0
margin_right = 161.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="MagnLabel" type="Label" parent="VBox/V/ShadowControl"]
margin_left = 165.0
margin_top = 5.0
margin_right = 221.0
margin_bottom = 19.0
text = "Distance"

[node name="MagnVal" type="SpinBox" parent="VBox/V/ShadowControl"]
margin_left = 225.0
margin_right = 299.0
margin_bottom = 24.0
allow_greater = true

[node name="Spacer3" type="Control" parent="VBox/V/ShadowControl"]
margin_left = 303.0
margin_right = 323.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="Sliders" type="GridContainer" parent="VBox/V"]
margin_top = 176.0
margin_right = 323.0
margin_bottom = 256.0
columns = 3

[node name="Label" type="Label" parent="VBox/V/Sliders"]
margin_top = 5.0
margin_right = 105.0
margin_bottom = 19.0
text = "Shadow Strength"

[node name="SS_Slider" type="HSlider" parent="VBox/V/Sliders"]
margin_left = 109.0
margin_top = 4.0
margin_right = 245.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="SS_Spinbox" type="SpinBox" parent="VBox/V/Sliders"]
margin_left = 249.0
margin_right = 323.0
margin_bottom = 24.0
size_flags_horizontal = 9
value = 100.0
align = 2
suffix = "%"

[node name="Label2" type="Label" parent="VBox/V/Sliders"]
margin_top = 33.0
margin_right = 105.0
margin_bottom = 47.0
text = "Shadow Dropoff"

[node name="SD_Slider" type="HSlider" parent="VBox/V/Sliders"]
margin_left = 109.0
margin_top = 32.0
margin_right = 245.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="SD_Spinbox" type="SpinBox" parent="VBox/V/Sliders"]
margin_left = 249.0
margin_top = 28.0
margin_right = 323.0
margin_bottom = 52.0
size_flags_horizontal = 9
min_value = 1.0
value = 100.0
allow_greater = true
align = 2
suffix = "%"

[node name="Label3" type="Label" parent="VBox/V/Sliders"]
margin_top = 61.0
margin_right = 105.0
margin_bottom = 75.0
text = "Blur Radius"

[node name="BR_Slider" type="HSlider" parent="VBox/V/Sliders"]
margin_left = 109.0
margin_top = 60.0
margin_right = 245.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
page = 1.0
value = 10.0

[node name="BR_Spinbox" type="SpinBox" parent="VBox/V/Sliders"]
margin_left = 249.0
margin_top = 56.0
margin_right = 323.0
margin_bottom = 80.0
size_flags_horizontal = 9
min_value = 1.0
value = 10.0
allow_greater = true
align = 2
